--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,17 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  cache:
+    type: simple
+
+
+
+logging:
+  level:
+    org:
+      springframework:
+        cache: trace
+        web.filter.CommonsRequestLoggingFilter: debug
 
 springdoc:
   swagger-ui:
