feat: Adding Zalando-Logbook Configuration to Log Request and Response

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,8 @@ logging:
     org:
       springframework:
         cache: trace
-        web.filter.CommonsRequestLoggingFilter: debug
+      zalando:
+        logbook: trace
 
 springdoc:
   swagger-ui:
